[package]
name = "anchor-instruction-sysvar"
version = "0.1.0"
description = "Instruction introspection for Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_instruction_sysvar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.17"